--- a/source/_posts/答对6个算我输.md
+++ b/source/_posts/答对6个算我输.md
@@ -2,6 +2,11 @@
 title: 答对6个算我输。
 ---
 
+![Image text](/images/banner/banner1.jpg)
+
+<!-- More -->
+
+
 这些题是我之前很久写的一篇很简单的博文。现在拿出来炒冷饭。
 
 感觉还是可以从中复习的一点小知识。
@@ -9,8 +14,6 @@ title: 答对6个算我输。
 那么下面开始咯。
 
 总共6道题。下面是答案，做完再看看。
-
-<!-- More -->
 
 ## 问题
 
