--- a/source/_posts/简单实现拖拽功能.md
+++ b/source/_posts/简单实现拖拽功能.md
@@ -32,3 +32,10 @@ title: 简单介绍拖拽
 
 要使用这个问题。我们只要在这个div上再绑定一个dragover事件。让他阻止默认事件，即event.preventDefault();
 这样就拖拽的对象就可以拖进该div中，同时松手后，该div目标对象就会触发drop事件。
+
+
+### 效果
+
+下面是我实际项目中需要做的第一个排班表功能需要用到的拖拽功能的效果。
+
+![Image text](/images/gif/drag.gif)
