修改 错别字

--- a/source/_posts/简单实现拖拽功能.md
+++ b/source/_posts/简单实现拖拽功能.md
@@ -30,12 +30,12 @@ title: 简单介绍拖拽
 
 如果说在拖拽的时候，想要让这个拖拽的事物放到一个div里，但是div默认是不能拖拽进去。鼠标拖拽进去会显示一个禁止符号。而且也不会触发drop事件。
 
-要使用这个问题。我们只要在这个div上再绑定一个dragover事件。让他阻止默认事件，即event.preventDefault();
+要解决这个问题。我们只要在这个div上再绑定一个dragover事件。让他阻止默认事件，即event.preventDefault();
 这样就拖拽的对象就可以拖进该div中，同时松手后，该div目标对象就会触发drop事件。
 
 
 ### 效果
 
-下面是我实际项目中需要做的第一个排班表功能需要用到的拖拽功能的效果。
+下面是我实际项目中需要做的一个排班表功能需要用到的拖拽功能的效果。
 
 ![Image text](/images/gif/drag.gif)
