--- a/source/_posts/正则表达式之问号篇.md
+++ b/source/_posts/正则表达式之问号篇.md
@@ -14,7 +14,7 @@ title: 正则表达式之问号篇
 
 ### ?
 
-只有这个符号（？）的时候，表示的是0个或1个。相当于{0,1}。好的这个就不多解释了
+只有这个符号（？）的时候，表示的是0个或1个。相当于{0,1}。好的这个就不多解释了。
 
 
 ## ?开头的组合
