--- a/source/_posts/正则表达式之问号篇.md
+++ b/source/_posts/正则表达式之问号篇.md
@@ -29,7 +29,7 @@ title: 正则表达式之问号篇
 
 你肯定有疑问,那为什么要有这个组合？
 
-它还是有用的。因为了解正则里面加了括号都会被认为是一组数据。
+它还是有用的。因为正则里面加了括号都会被认为是一组数据。
 
 举个栗子：
 
@@ -73,9 +73,11 @@ title: 正则表达式之问号篇
 
 同样的**只要加了问号在前面的组合，这种都会被认为是不需要组合的**，只是说 **(?:)** 没有别的特殊含义，别的组合还是有各自的含义的。
 
-如 **(?=bean)** 表示匹配以bean结尾的前面部分（匹配到的内容不包含bean）,一般是加在所要匹配内容的**后面**。（/\b\w+(?=ing\b)/）
+如 **(?=bean)** 表示匹配以bean结尾的前面部分（匹配到的内容不包含bean）,一般是加在所要匹配内容的**后面**。
+（/\b\w+(?=bean\b)/）
 
-而 **(?<=bean)** 表示匹配以bean结尾的后面部分（匹配到的内容不包含bean）,一般是加在所要匹配的内容**前面**。（(?<=\bre)\w+\b)/）
+而 **(?<=bean)** 表示匹配以bean结尾的后面部分（匹配到的内容不包含bean）,一般是加在所要匹配的内容**前面**。
+（(?<=\bbean)\w+\b)/）
 
 实例栗子：比如你要批量修改一篇文章中的出现的“编辑文章”，“编辑数据”改成“修改文章”，“修改数据”。
 
@@ -130,17 +132,17 @@ title: 正则表达式之问号篇
 
 ps: [\u4e00-\u9fa5]代表在中文字，是中文字符的范围。
 
-为什么会这样的。首先因为默认是贪婪匹配，所以会匹配到最长的组合$1就是"文章编辑数据",就变成了"修改文章编辑数据"，后面的那个编辑就没有修改过来了。
+为什么结果会这样的。首先因为默认是贪婪匹配，所以会匹配到最长的组合$1就是"文章编辑数据",就变成了"修改文章编辑数据"，后面的那个编辑就没有修改过来了。
 
 如果这样：
 
 ```bash
-    "编辑文章编辑数据".replace(/编辑([\u4e00-\u9fa5]+?)/g,'修改$1'); // 结果："修改文章编辑数据"
+    "编辑文章编辑数据".replace(/编辑([\u4e00-\u9fa5]+?)/g,'修改$1'); // 结果："修改文章修改数据"
 ```
 
 这样，它就会尽可能地匹配更少的，所以它会匹配的两个，一个是“编辑文”，一个是“编辑数”，然后把他们都修改成“修改文”和“修改数”
 
-所以结果就变成了“修改文章编辑数据”。我不知道我的栗子取得恰不恰当。但是一般这种的话会限制头和尾，这样的匹配会更加精准。
+所以结果就变成了“修改文章修改数据”。我不知道我的栗子取得恰不恰当。但是一般这种的话会限制头和尾，这样的匹配会更加精准。
 
 如：a.*?b匹配最短的，以a开始，以b结束的字符串。如果把它应用于aabab的话，它会匹配aab（第一到第三个字符）和ab（第四到第五个字符）。
 
